# jaco_manipulation_test

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  package.xml  py_requirements.txt  setup.py
include/jaco_manipulation/test/: anchoring_base_test.h  anchoring_edge_case_test.h  anchoring_test.h  baseline_csv_reader.h  csv_reader.h  obstacle_anchoring_test.h
launch/: anchoring_edge_case_test.launch  anchoring_test.launch  baseline_test.launch  obstacle_anchoring_test.launch
post/: anchoring_edge_case_test_recording.csv  anchoring_obstacle_test_recording.csv  anchoring_poses.csv  baseline_test_recording.csv  edge_case_poses.csv  obstacle_anchoring_poses.csv
post/analyse/: analyse.py  analyse_anchoring.py  analyse_anchoring_template.py  analyse_baseline.py  analyse_baseline_template.py  analyse_recordings.py  analyse_recordings_test.py  analyse_test.py  anchoring_recordings.txt  extract_edge_cases.py  stats.txt
post/results/anchoring/01/: 01_anchoring_test_recording.csv
post/results/anchoring/02/: 02_anchoring_test_recording.csv
post/results/anchoring/combined/: combined_anchoring_test_recording.csv
post/results/anchoring_edge_case/: combined_anchoring_edge_case_test_recording_fails.csv
post/results/anchoring_edge_case/connect/01/: 01_anchoring_edge_case_test_recording.csv
post/results/anchoring_edge_case/connect/02/: 02_anchoring_edge_case_test_recording.csv
post/results/anchoring_edge_case/connect/combined/: combined_anchoring_edge_case_test_recording.csv
post/results/anchoring_edge_case/final/01/: 01_anchoring_test_recording.csv
post/results/anchoring_edge_case/final/02/: 02_anchoring_test_recording.csv  notes.md
post/results/anchoring_edge_case/final/combined/: combined_anchoring_test_recording.csv
post/results/anchoring_edge_case/stark/3/03/: 03_anchoring_edge_case_test_recording.csv
post/results/anchoring_edge_case/stark/6/01/: 01_anchoring_edge_case_test_recording.csv
post/results/anchoring_edge_case/stark/6/combined/: combined_anchoring_edge_case_test_recording.csv
post/results/anchoring_edge_case/stark/9/02/: 02_anchoring_edge_case_test_recording.csv
post/results/anchoring_edge_case/stark/9/combined/: combined_anchoring_edge_case_test_recording.csv
post/results/anchoring_edge_case/stark_post_pre_grasp/1.5/02/: 02_anchoring_edge_case_test_recording.csv
post/results/anchoring_edge_case/stark_post_pre_grasp/1.5/combined/: combined_anchoring_edge_case_test_recording.csv
post/results/baseline/01/: 01_baseline_test_recording.csv
post/results/baseline/02/: 02_baseline_test_recording.csv
post/results/baseline/combined/: combined_baseline_test_recording.csv
post/results/final/01/: 01_anchoring_test_recording.csv  notes.md
post/results/final/02/: 02_anchoring_test_recording.csv
post/results/final/combined/: combined_anchoring_test_recording.csv
post/results/obstacle_anchoring/01/: 01_obstacle_anchoring_test_recording.csv
post/results/obstacle_anchoring/02/: 02_obstacle_anchoring_test_recording.csv
post/results/obstacle_anchoring/03/: 03_obstacle_anchoring_test_recording.csv
post/results/obstacle_anchoring/combined/: combined_obstacle_anchoring_test_recording.csv
src/: anchoring_base_test.cpp  anchoring_edge_case_test.cpp  anchoring_test.cpp  obstacle_anchoring_test.cpp  run_anchoring_edge_case_test.cpp  run_anchoring_test.cpp  run_obstacle_anchoring_test.cpp
src/record/: anchoring_test_recorder.py  test_recorder.py
