<?xml version="1.0"?>
<package format="2">
    <name>jaco_manipulation_test</name>
    <version>0.0.0</version>
    <description>The jaco_manipulation test package</description>
    <author email="chitt@live.in">Chittaranjan Srinivas Swaminathan</author>
    <author email="gjulian@uos.de">Julian Gaal</author>
    <maintainer email="gjulian@uos.de">Julian Gaal</maintainer>
    <license>GNU General Public License</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>anchor_msgs</build_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>jaco_manipulation</build_depend>
    <build_export_depend>jaco_manipulation</build_export_depend>
    <exec_depend>anchor_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>jaco_manipulation</exec_depend>
    <exec_depend>cmake_modules</exec_depend>
    <exec_depend>moveit_core</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
</package>
